// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard debe incrementar el contador 1`] = `
<div
  className="productCard undefined "
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard debe incrementar el contador 2`] = `
<div
  className="productCard undefined "
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard debe mostrar el componente correctamte 1`] = `
<div
  className="productCard undefined "
>
  <h1>
    Prueba
  </h1>
</div>
`;
